dev(more_networks): Evm COnfig
